overlays/uksouth-lloyds/olympus/api-reflector/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/service-upstream: 'true'
    nginx.ingress.kubernetes.io/use-regex: 'true'
  name: reflector.${cluster_name}.${cluster_location}.bink.sh
  namespace: default
spec:
  rules:
    - host: reflector.${cluster_name}.${cluster_location}.bink.sh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-reflector
                port:
                  number: 80
  tls:
    - hosts:
        - reflector.${cluster_name}.${cluster_location}.bink.sh
